--- a/main.html
+++ b/main.html
@@ -1,2 +1,11 @@
 <!DOCTYPE>
 <html>
+  <head>
+    <title> Gitansh </title>
+  </head>
+  <body>
+    <main>
+      
+    </main>
+  </body>
+</html>
