--- a/main.html
+++ b/main.html
@@ -5,7 +5,19 @@
   </head>
   <body>
     <main>
-      <p> hello </p>
+      <p> hello I NEED TO FILL SPACE </p>
     </main>
   </body>
+  <div>
+    <img src="Tree.webp"> 
+    <p> Tree </p>
+  </div>
+   <div>
+    <img src="Tree.webp"> 
+    <p> Tree </p>
+  </div>
+   <div>
+    <img src="Tree.webp"> 
+    <p> Tree </p>
+  </div>
 </html>
