--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
       <p> hello I NEED TO FILL SPACE </p>
     </main>
   </body>
+  <div class=row> 
   <div>
     <img src="Tree.webp"> 
     <p> Tree </p>
@@ -19,5 +20,6 @@
    <div>
     <img src="Tree.webp"> 
     <p> Tree </p>
+  </div>
   </div>
 </html>
