--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
     </main>
   </body>
   <div class=row> 
+    .row{
+    display: flex
+    }
   <div>
     <img src="Tree.webp"> 
     <p> Tree </p>
