--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                     <div style="text-align:center">
                         <h1> Best Times</h1>
                         <h2> Zoo Grand Opening</h2>
+                        <h2> By: Gitansh Jani</h2>
                     </div>
 
                             <div class="row">
