--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                             <div class="row">
 
-                                <div style= font size= 15px>
+                                <div style= font-size= 17px>
                                      <p> Today was Best Brains Zoo's grand opening. </p>
                                      <p> It was a beautiful day. The animals looked strong and healthy. </p>
                                       <p> The three most popular attractions were: </p>
