--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Learn HTML </title>
+    <title> Gitansh's website </title>
         <style>
             .row {   display: flex  }
         </style>
