--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                         <li> Lions</li>
                                         <li> Parrots</li>
                                   </ol> 
-                             
+                                </div>
                                
                                         <div>
                                             <img src="Images/wordcloud.png" height=250px width=250px>
